--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
             type="chetan.example.databinding.Data">
 
         </variable>
+        <variable
+            name="presenter"
+            type="chetan.example.databinding.MainActivityPresenter">
+
+        </variable>
     </data>
 <RelativeLayout
 
@@ -32,6 +37,7 @@
         android:layout_below="@+id/text"
         android:layout_marginTop="100dp"
         android:layout_centerInParent="true"
+        android:onClick="@{()->presenter.changeText(data)}"
         />
 </RelativeLayout>
 </layout>
